--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nextwatch",
-  "homepage": "https://github.com/dilleshdill/NextWatch/",
+  "homepage": "https://dilleshdill.github.io/NextWatch/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
